# ai-medical-record-review

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Pipfile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  groups.py  prompts.py  pyproject.toml  requirements.txt  serve.py  sonar-project.properties
.claude/: settings.json
.claude/rules/: commit-scopes.md  project-conventions.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  rewrite.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_dev.py
backend/alembic/: env.py
backend/alembic/versions/: 009991f2eda1_one_active_job_per_document_index.py  73abdcd5ef01_baseline_schema.py  a0725d467a48_add_access_token_table_and_is_verified.py  b1f4a7c9d2e3_add_document_header_fields.py  c2d5e8f1a3b7_resumable_summarize.py
backend/app/: __init__.py  cli.py  config.py  db.py  errors.py  main.py  models.py
backend/app/api/: __init__.py  admin.py  deps.py  documents.py
backend/app/auth/: __init__.py  backend.py  db.py  deps.py  password.py  routes.py  schemas.py  users.py
backend/app/schemas/: __init__.py  admin.py  documents.py
backend/app/services/: __init__.py  aggregate.py  audit.py  bundles.py  catalog.py  classification.py  extraction.py  files.py  gemini.py  genai_client.py  genai_retry.py  jobs.py  linked_pdf.py  ocr.py  pdf.py  pools.py  rate_limit.py  reporting.py  rows.py  seed_catalog.py  segment_engine.py  summarize_engine.py  verify_pass.py  windows.py
backend/app/worker/: __init__.py  __main__.py  failures.py  queues.py  recovery.py  tasks.py
backend/scripts/: migrate_from_sqlite.py
backend/scripts/dev/: ocr_concurrency_hammer.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_gate.py  test_auth_integration.py  test_catalog.py  test_classification.py  test_documents_api.py  test_failures.py  test_files.py  test_genai_client.py  test_genai_retry.py  test_jobs.py  test_linked_pdf.py  test_models_methods.py  test_ocr.py  test_password.py  test_pool_wiring.py  test_pools.py  test_rate_limit.py  test_reporting.py  test_rows_property.py  test_segment_thinking.py  test_user_manager.py
deploy/: env.docker.example  nginx.conf  server-bootstrap.sh
docs/: INDEX.md  RUNBOOK.md  architecture.md
docs/decisions/: 0001-tooling-uv-docker.md  0002-sdk-migration.md  0003-modularization.md  0004-segmentation-b1-fixes.md  0005-testing-and-ci.md  0006-editable-catalog-admin.md  README.md
docs/explanation/: categorization.md  frontend-ui.md  segmentation.md  summarization.md
docs/how-to/: add-a-blueprint.md  add-a-category.md  run-tests.md
docs/plans/: 2026-06-15-pr-d-tests-ci.md  2026-06-15-sonarcloud-debt.md  2026-06-16-b5-b6-categorization.md  2026-06-16-segmentation-gemini-free-prep.md  2026-06-16-segmentation-pss.md  2026-06-17-segmentation-bakeoff-fixes.md  2026-07-04-vertex-demo-port.md  2026-07-05-review-app.md  2026-07-05-user-accounts-multidoc.md  2026-07-06-RESUME-35flash-and-review-features.md  2026-07-06-summaries-modern-ui.md  2026-07-07-ui-layout-fixes.md  2026-07-09-SESSION-HANDOFF.md  2026-07-09-verify-suggest-net.md  2026-07-10-admin-categories-prompts.md  2026-07-10-legacy-summary-features.md  2026-07-14-nextjs-fastapi-rewrite.md  2026-07-14-porting-spec.md  2026-07-14-porting-spec.raw.json  2026-07-15-p2-auth.md  2026-07-15-p3-documents-api.md  2026-07-15-p4-job-pipeline.md  2026-07-15-p5-admin-api.md  2026-07-15-p6-parity-features.md  2026-07-16-p7c-review-editor.md  2026-07-16-p7e-bundles.md  2026-07-16-p7f-admin.md  2026-07-16-p8-local-stack.md  2026-07-17-p7-redesign-to-claude-design.md  2026-07-21-export-filename.md  2026-07-21-header-extraction-persist.md  2026-07-21-my-documents-row-affordance.md  2026-07-21-nav-home-and-backlink.md  2026-07-21-patient-column.md  2026-07-21-pipeline-hang-fix.md  2026-07-21-render-summary-markdown.md  2026-07-21-resumable-summarize.md  2026-07-22-ci-test-the-rewrite.md  2026-07-22-error-validation-hardening.md  2026-07-22-persistent-header.md  (+3 more)
docs/prompts/: 2026-07-15-p7-frontend-conversion-prompts.md
docs/reference/: Categories Jan 25, 2025.docx  MRR Steps.docx  api-routes.md  csv-contract.md
docs/research/: Initial-Research.md
experiments/a1-segmentation/: .gitignore  CASE3-BAKEOFF-RESULTS.md  ERROR-TRIAGE-RESULTS.md  EXPERIMENT-LOG.md  OCR-TEXT-EXPERIMENT-RESULTS.md  OVERSEG-SOLUTIONS-RESEARCH.md  PROMPT-LEVERS-RESULTS.md  README.md  VERIFY-UPGRADE-DESIGN.md  VERIFY-UPGRADE-RESULTS.md
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.mts  vitest.setup.ts
frontend/app/: evaluators-ds.css  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/e2e/: auth.spec.ts  documents.spec.ts  navigation.spec.ts  support.ts
frontend/hooks/: use-admin.ts  use-auth.ts  use-current-user.ts  use-documents.ts  use-review-workflow.test.tsx  use-review-workflow.ts  use-summaries.ts
frontend/lib/: admin-api.ts  api.ts  auth-api.ts  bundle-api.ts  documents-api.ts  errors.test.ts  errors.ts  review-api.ts  review-rows.property.test.ts  review-rows.test.ts  review-rows.ts  types.ts
mrr_ai/: CLAUDE.md  __init__.py  catalog.py  cli.py  config.py  errors.py  extensions.py  models.py  security.py  seed_catalog.py  state.py  taxonomy.py
mrr_ai/blueprints/: CLAUDE.md  __init__.py  admin_api.py  documents_api.py  export.py  extraction.py  individual_mrr.py  pages.py  reports.py  review_api.py  segmentation.py  summarize.py  upload.py
mrr_ai/services/: CLAUDE.md  __init__.py  audit.py  bundles.py  categorization.py  classification.py  files.py  gemini.py  genai_retry.py  job_queue.py  jobs.py  ocr.py  pdf.py  segment_engine.py  summarize_engine.py  verify_pass.py
mrr_ai/static/: admin.js  bundle-page.js  home.js  (+6 more)
secrets/: .gitkeep
static/: styles.css
templates/: DepositionReports.html  DiagAndOpReports.html  checkCSV.html  index.html  individual_mrr.html  pages.html  pagesmanual.html  pdfsegment.html
tests/: CLAUDE.md  conftest.py  test_smoke.py
(+165 files in other folders)
