[project]
name = "ai-medical-record-review"
version = "0.1.0"
description = "Segments, categorizes, and summarizes medical-record PDFs into review reports."
readme = "README.md"
# Pinned to 3.12 for now: the deprecated google-generativeai SDK has no 3.13 support.
# The refactor/migrate-sdks PR moves to google-genai and bumps this to 3.13.
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask",
    "openai",
    "google-genai",
    "pymupdf",
    "pypdf",
    "pandas",
    "numpy",
    "python-docx",
    "pytesseract",
    "pdf2image",
    "pillow",
    "httplib2",
    "python-dotenv",
    "sentence-transformers>=5.5.1",
]

[tool.uv]
# This is a flat Flask app, not an installable package; only manage dependencies.
package = false

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
    "pytest",
    "pytest-cov",
]
experiment = [
    "markitdown>=0.1.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# Archived research spike; preserved as-is, not maintained to lint standard.
extend-exclude = ["experiments"]

[tool.ruff.lint]
# Errors, pyflakes, import-sort, pyupgrade, bugbear. Complexity/type rules are
# deferred on the inherited code per the "flag when touched" policy; expand later.
select = ["E", "F", "I", "UP", "B"]
# The formatter owns line length; E501 mostly flags long prompt string literals
# it cannot wrap, so linting it is noise (Ruff's own recommendation).
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
# Advisory while the inherited code is untyped; tighten as annotations are added.
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
exclude = [
    ".venv",
    ".venv-trial",
    "myenv",
    "gemini_trial*.py",
    "diag_slice.py",
    "experiments",
    "**/__pycache__",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
# Measure the application package only; the smoke/baseline harness and tests are
# excluded so coverage reflects exercised production code, not test scaffolding.
source = ["mrr_ai"]
omit = ["tests/*", "*/__pycache__/*"]
# Relative paths so SonarCloud can resolve files from coverage.xml in CI.
relative_files = true

[tool.coverage.report]
# Lines that never need coverage: defensive guards and the script entry point.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
