[project]
name = "mrr-backend"
version = "0.1.0"
description = "MRR AI FastAPI backend (Next.js + FastAPI re-platform)"
requires-python = ">=3.12"
# Core (web + db + auth + queue). Light on purpose so the web tier and CI install fast.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "redis>=5.2",
    "rq>=2.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
]

# Document processing the WEB tier needs (upload page-count, OCR, summarize, docx export,
# bundle PDFs). Torch-FREE, so the web tier + CI install stays light: `uv sync --extra docs`.
[project.optional-dependencies]
docs = [
    "google-genai>=1.0",
    "pypdf>=5.1",
    "pymupdf>=1.24",
    "pdf2image>=1.17",
    "pytesseract>=0.3.13",
    "python-docx>=1.1",
    "numpy>=2.1",
]
# Segmentation classifier (torch + sentence-transformers) - the P4 WORKER tier only:
# `uv sync --extra docs --extra classifier`. Kept out of the web tier so it never pulls torch.
classifier = [
    "sentence-transformers>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv]
package = false  # application, not a distributable package - install deps, don't build the root

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
